@@ -1,3 +1,8 @@
+2008-04-08  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* /src/lib/timer.py: Don't hardcode time formats. Patch by Claude Paroz
+	in (bug #516508)
+
 2008-04-07  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* /src/lib/sudoku_maker.py: Just try to create the dir and catch all
